--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.escolapee2024.EscolaPEE2024</exec.mainClass>
+        <exec.mainClass>com.escolapee2024.JanelaPrincipal</exec.mainClass>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
